--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,19 @@
 	</licenses>
 
 	<developers>
+        <developer>
+            <id>gselzer</id>
+            <name>Gabriel Selzer</name>
+            <url>https://imagej.net/people/gselzer</url>
+            <roles>
+                <role>lead</role>
+                <role>developer</role>
+                <role>debugger</role>
+                <role>reviewer</role>
+                <role>support</role>
+                <role>maintainer</role>
+            </roles>
+        </developer>
 		<developer>
 			<id>tpietzsch</id>
 			<name>Tobias Pietzsch</name>
@@ -158,7 +171,7 @@ Mark Longair, Brian Northan, Nick Perry, Curtis Rueden, Johannes Schindelin,
 Jean-Yves Tinevez and Michael Zinsmaier.</license.copyrightOwners>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
-		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
+		<releaseProfiles>sign</releaseProfiles>
 
 		<!--
 		NB: Older versions of OpenJDK 11 have a bug in the javadoc tool,
